# androidStudy

./: .gitignore  README.md  build.gradle  gradle.properties  proguard-rules_backup.pro  settings.gradle  terminal.txt
app/: CMakeLists.txt  build.gradle  proguard-rules.pro  release.jks
app/src/androidTest/java/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/aidl/: IRemoteService.aidl
app/src/main/assets/: city.json  interact.html  no_net.html  person-machine-slide.html  user_feedback.html  useragree.html  useragree.txt
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/: yuv420p_to_rgba.h
app/src/main/jni/: com_style_AndroidJniUtils.h  empty.cpp  main.c
app/src/main/res/anim/: activity_close_enter.xml  activity_open_exit.xml  general_list_popup_close.xml  general_list_popup_open.xml  grow_from_view.xml  grow_small_from_view.xml
app/src/main/res/animator/: property_demo.xml
app/src/main/res/color/: sel_emo_card.xml
app/src/main/res/drawable/: bg_add_address.xml  bg_banner_indicator.xml  bg_banner_indicator_selected.xml  bg_banner_indicator_unselect.xml  bg_comm_toolbar.xml  bg_custom_tag.xml  bg_emotion_tab_selected.xml  bg_emotion_tab_unselect.xml  bg_first_name.xml  bg_float_calling.xml  bg_material_dialog.xml  bg_popupwindow_common.xml  bg_week_sleep_view.xml  bg_window_translucent.xml  delete_selector.xml  divider_gray_vertical.xml  sel_emotion_tab.xml  tab_active_bg.xml  tab_chat_bg.xml  tab_contact_list_bg.xml  tab_find_bg.xml
app/src/main/res/drawable-v21/: bg_pressed_default.xml
(+1863 files in other folders)
